--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body{
 a{
     text-decoration: none;
 }
+ul{
+    list-style: none;
+}
 .title-text{
     font-size: 14px;
     color: #E76F51;
@@ -13,22 +16,79 @@ a{
 #banner{
     background: #264653;
 }
-.banner-text{
+.text-size{
     font-size: 14px;
 }
 .btn-custom{
-    padding: 10px 46px;
+    border: 1px solid #E76F51;
+    padding: 10px 40px;
     background: #E76F51;
     color: #fff;
     border-radius: 5px;
+    transition: .5s;
 }
 .btn-custom:hover{
-    color: #fff;
+    color: #E76F51;
+    border: 1px solid #E76F51;
+    background: none;
 }
-/* fetured bike part sart */
+/* featured bike part sart */
 .color-img{
     filter: brightness(.9) grayscale(100%) ;
 }
 .color-img_2{
     filter: brightness(.9);
 }
+
+/* client say */
+.text-color{
+    color: #E76F51;
+}
+.card-image{
+    width: 149px;
+    height: 149px;
+    border-radius: 50%;
+}
+.card-padding{
+    padding: 40px 35px;
+    border-radius: 5px;
+    border: 1px solid #DEDEDE;
+    
+}
+.icon-fill{
+    color: #E77C40;
+}
+.icon-unfill{
+    border-image:#E77C40 ;
+}
+.text-hight{
+    line-height: 0;
+}
+.text-width{
+    width: 63%;
+}
+/* Accessories  */
+#accessories{
+    background: #afc8d13d;
+}
+/* footer */
+footer{
+    background: #000;
+}
+.store-text{
+    font-size: 18px;
+}
+.text-hight{
+    line-height: 0;
+}
+.icon-size{
+    font-size: 35px;
+    margin-right: 15px;
+}
+.store{
+    padding: 10px 30px;
+    border: 1px solid #fff;
+    border-radius: 10px;
+}
+
+
