--- a/style.css
+++ b/style.css
@@ -6,9 +6,6 @@ body{
 a{
     text-decoration: none;
 }
-ul{
-    list-style: none;
-}
 .title-text{
     font-size: 14px;
     color: #E76F51;
@@ -75,20 +72,9 @@ ul{
 footer{
     background: #000;
 }
-.store-text{
-    font-size: 18px;
+.footer-bottom{
+    margin-bottom: 0;
 }
-.text-hight{
-    line-height: 0;
-}
-.icon-size{
-    font-size: 35px;
-    margin-right: 15px;
-}
-.store{
-    padding: 10px 30px;
-    border: 1px solid #fff;
-    border-radius: 10px;
-}
+
 
 
